# sheneternity-agent

./: Cargo.toml  README.md
debug/: Prompt.txt
src/: lib.rs  main.rs
src/data/: app.rs  llm.rs  mod.rs
src/event/: keyboard.rs
src/ui/: layout.rs
src/ui/component/: app_mode.rs  chat_window.rs  current_chat_list.rs  histoy_caht_list.rs  input_bar.rs  mod.rs  notification_bar.rs
