[package]
name = "sheneternity-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
chrono = "0.4.44"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.3", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
futures-util = "0.3.32"
anyhow = "1.0.102"
